# OpenCircuit

./: CLAUDE.md  LICENSE  README.md
desktop/: analyze_0x81.py  analyze_counters.py  analyze_cursor.py  crack_f.py  decode_0x47.py  decode_activity.py  decode_bulk.py  decode_ppg.py  extract_last_night.py  find_table.py  livehr.py  probe_hr.py  probe_temp.py  probe_ts.py  pyproject.toml  ringconn_sleep_fit.py  scan_smp.py
desktop/opencircuit/: __init__.py  cli.py  sniff.py
desktop/openringconn/: ble.py  cli.py  framing.py  session.py
docs/: HANDOFF_MACOS_IOS.md  HEALTHKIT_MAPPING.md  PRIVACY.md  PROTOCOL.md  REVERSE_ENGINEERING.md  ROADMAP.md  RUNBOOK_OVERNIGHT_TEMP.md  RUNBOOK_SLEEP_GROUNDTRUTH.md  TESTFLIGHT.md
ios/: .gitignore  ExportOptions.plist  project.yml
ios/OpenCircuit/: App.swift  ContentView.swift  DeviceInfoView.swift  GoalsCardView.swift  HealthNotificationCenter.swift  Info.plist  OnboardingView.swift  PrivacyInfo.xcprivacy  SleepCardView.swift  UserProfile.swift  VitalsStatusCardView.swift  VitalsTableView.swift  WorkoutView.swift
ios/OpenCircuitTests/: HealthKitShareTypesTests.swift
ios/OpenRingConn/: App.swift  AppDelegate.swift  ContentView.swift  CycleCalendarView.swift  CycleStore.swift  DeviceInfoView.swift  ExportView.swift  GoalsCardView.swift  HealthNotificationCenter.swift  Info.plist  SleepCardView.swift  SleepSchedule.swift  TrendsView.swift  UserProfile.swift  VitalsStatusCardView.swift  VitalsTableView.swift  WorkoutSessionManager.swift  WorkoutView.swift
ios/OpenRingConnTests/: BackgroundRefreshSchedulerTests.swift  (+2 more)
(+145 files in other folders)
